--- a/style.css
+++ b/style.css
@@ -72,36 +72,35 @@ body {
   font-family: "ubuntu";
 }
 
-
 /* next page button */
 
 .btn-next--page {
-	font-family: "ubuntu";
-	color: #FFF;
-	font-size: 1.6rem;
-	border-radius: 5px;
-	border: 0 solid #00cf03 ;
-	background: linear-gradient(180deg, #00fa19 5%, #06bd31 100%);
-	text-decoration: none;
-	cursor: pointer;
-	display: inline-flex;
+  font-family: "ubuntu";
+  color: #fff;
+  font-size: 1.6rem;
+  border-radius: 5px;
+  border: 0 solid #00cf03;
+  background: linear-gradient(180deg, #00fa19 5%, #06bd31 100%);
+  text-decoration: none;
+  cursor: pointer;
+  display: inline-flex;
   float: right;
   margin-right: 2rem;
 }
 .btn-next--page:hover {
-	background: linear-gradient(180deg, #00cf03 5%, #00db04 100%);
+  background: linear-gradient(180deg, #00cf03 5%, #00db04 100%);
 }
 .btn-next--page-icon {
-	padding: 1rem;
-	border-right: .1rem solid rgba(255, 255, 255, 0.16);
-	box-shadow: rgba(0, 0, 0, 0.14) -.1rem 0 0 inset;
+  padding: 1rem;
+  border-right: 0.1rem solid rgba(255, 255, 255, 0.16);
+  box-shadow: rgba(0, 0, 0, 0.14) -0.1rem 0 0 inset;
 }
 .btn-next--page-icon svg {
-	vertical-align: middle;
-	position: relative;
+  vertical-align: middle;
+  position: relative;
 }
 .btn-next--page-text {
-	padding: 1rem 1.8rem;
+  padding: 1rem 1.8rem;
   text-transform: uppercase;
 }
 
@@ -141,13 +140,12 @@ body {
   margin: 2rem 0 4rem;
   width: 30rem;
   margin-left: 2rem;
-
 }
 
 .form-control input {
   background-color: transparent;
   border: 0;
-  border-bottom: .2rem #1c561c solid;
+  border-bottom: 0.2rem #1c561c solid;
   display: block;
   width: 100%;
   padding: 1.5rem 0;
@@ -173,7 +171,6 @@ body {
   font-size: 1.8rem;
   min-width: 0.5rem;
   transition: 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-  
 }
 
 .form-control input:focus + label span,
@@ -182,20 +179,20 @@ body {
   transform: translateY(-3rem);
 }
 
-input[type=date]:required:invalid::-webkit-datetime-edit {
-    color: transparent;
+input[type="date"]:required:invalid::-webkit-datetime-edit {
+  color: transparent;
 }
 
 .btn {
   font-family: "ubuntu";
-	color: #FFF;
-	font-size: 1.6rem;
-	border-radius: 5px;
-	border: 0 solid #00cf03 ;
-	background: linear-gradient(180deg, #00fa19 5%, #06bd31 100%);
-	text-decoration: none;
-	cursor: pointer;
-	display: inline-flex;
+  color: #fff;
+  font-size: 1.6rem;
+  border-radius: 5px;
+  border: 0 solid #00cf03;
+  background: linear-gradient(180deg, #00fa19 5%, #06bd31 100%);
+  text-decoration: none;
+  cursor: pointer;
+  display: inline-flex;
   float: right;
   margin-top: 8rem;
   margin-left: 6rem;
@@ -203,141 +200,156 @@ input[type=date]:required:invalid::-webkit-datetime-edit {
 }
 
 .btn:hover {
-	background: linear-gradient(180deg, #00cf03 5%, #00db04 100%);
+  background: linear-gradient(180deg, #00cf03 5%, #00db04 100%);
 }
 
 .btn-icon {
-	padding: 1.2rem;
-	border-right: 1rem solid rgba(255, 255, 255, 0.16);
-	box-shadow: rgba(0, 0, 0, 0.14) -.1rem 0 0 inset;
+  padding: 1.2rem;
+  border-right: 1rem solid rgba(255, 255, 255, 0.16);
+  box-shadow: rgba(0, 0, 0, 0.14) -0.1rem 0 0 inset;
 }
 .btn-icon svg {
-	vertical-align: middle;
-	position: relative;
+  vertical-align: middle;
+  position: relative;
 }
 .btn-text {
-	padding: 1rem 1.2rem;
+  padding: 1rem 1.2rem;
   text-transform: uppercase;
 }
 
 /* Data render styles */
 
-
 /* Part 1 : Data render container styles */
 .data-render {
   display: grid;
-  grid-template-columns: repeat(2,1fr);
+  grid-template-columns: repeat(2, 1fr);
   margin-top: 10rem;
   margin-bottom: 50rem;
 }
 
-.data-render input{
+.data-render input {
   width: 80%;
 }
 
-.left-container{
+.left-container {
   width: 40%;
   position: absolute;
   left: 5rem;
-  border: .2rem solid #1C561C;
+  border: 0.2rem solid #1c561c;
   border-radius: 2rem;
   box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
   height: 50vh;
 }
 
-
 /* Part 2: Student info container styles */
-.right-container{
+.right-container {
   width: 40%;
   position: absolute;
   right: 5rem;
-  border: .2rem solid #1C561C;
+  border: 0.2rem solid #1c561c;
   border-radius: 2rem;
   box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
   height: 50vh;
 }
 
-.input-form-two{
+.input-form-two {
   display: block;
 }
 
-.info-header{
+.info-header {
   font-size: 3rem;
   color: #00db04;
-  margin:2rem;
+  margin: 2rem;
 }
 
+.left-container h3{
+  margin-bottom: -4rem;
+}
 
 /* ///////////////////////////////// */
 
 /* Student info page */
 
-.input-box{
+.input-box {
   float: right;
   position: relative;
   height: 5.5rem;
   max-width: 5.5rem;
   width: 100%;
-  margin-right: 4rem ;
-  border-radius: .6rem;
+  margin-right: 4rem;
+  border-radius: 0.6rem;
   background-color: #fff;
   transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-  
 }
-.input-box.open{
+.input-box.open {
   max-width: 35rem;
 }
-input{
+input {
   position: relative;
   outline: none;
   border: none;
   height: 100%;
   width: 100%;
-  border-radius: .6rem;
+  border-radius: 0.6rem;
   font-size: 1.6rem;
   font-weight: 400;
   color: #333;
   background-color: #fff;
 }
-.input-box.open{
+.input-box.open {
   padding: 0 1.5rem 0 6.5rem;
 }
-.icon{
+.icon {
   position: absolute;
   height: 100%;
   top: 0;
   left: 0;
   width: 6rem;
-  border-radius: .6rem;
+  border-radius: 0.6rem;
   display: flex;
   justify-content: center;
   background-color: #fff;
 }
 .search-icon,
-.close-icon{
+.close-icon {
   position: absolute;
   top: 50%;
   font-size: 3rem;
   transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
   margin-right: 2rem;
 }
-.search-icon{
+.search-icon {
   color: #00db04;
   transform: translateY(-50%) rotate(90deg);
 }
-.input-box.open .search-icon{
+.input-box.open .search-icon {
   transform: translateY(-50%) rotate(0);
 }
-.close-icon{
+.close-icon {
   right: -4.5rem;
   color: #00db04;
-  padding: .5rem;
+  padding: 0.5rem;
   opacity: 0;
   pointer-events: none;
   transform: translateY(-50%);
 }
-.input-box.open .close-icon{
+.input-box.open .close-icon {
   opacity: 1;
   pointer-events: auto;
   transform: translateY(-50%) rotate(180deg);
+}
+
+/* Table info style */
+
+.table-info {
+  margin: 10rem 5rem;
+  min-width: 70%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.table-info label {
+ font-size: 1.8rem;
+ font-weight: 500;
+
 }
