--- a/style.css
+++ b/style.css
@@ -220,25 +220,57 @@ input[type="date"]:required:invalid::-webkit-datetime-edit {
 /* Data render styles */
 
 /* Part 1 : Data render container styles */
+
+.data {
+  overflow-y: scroll;
+  margin-left: 40rem;
+  width: 45%;
+  margin-top: 10rem;
+}
 .data-render {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  margin-top: 10rem;
-  margin-bottom: 50rem;
+  padding-top: 10rem;
 }
 
-.data-render input {
-  width: 80%;
+.container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
 }
+
+/* .data-render input {
+  width: 85%;
+} */
 
 .left-container {
-  width: 40%;
-  position: absolute;
-  left: 5rem;
   border: 0.2rem solid #1c561c;
   border-radius: 2rem;
   box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
   height: 50vh;
+  width: 100%;
+  padding-right: 3rem;
+
+}
+
+
+
+::-webkit-scrollbar {
+  width: 5px;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: lightgray;
+  border-radius: 2px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #b30000;
 }
 
 /* Part 2: Student info container styles */
@@ -262,7 +294,7 @@ input[type="date"]:required:invalid::-webkit-datetime-edit {
   margin: 2rem;
 }
 
-.left-container h3{
+.left-container h3 {
   margin-bottom: -4rem;
 }
 
@@ -349,7 +381,6 @@ input {
 }
 
 .table-info label {
- font-size: 1.8rem;
- font-weight: 500;
-
+  font-size: 1.8rem;
+  font-weight: 500;
 }
